--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     ],
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "robmorgan/phinx": "^0.16.1"
+        "robmorgan/phinx": "^0.16.1",
+        "phpmailer/phpmailer": "^6.9",
+        "league/oauth2-google": "^4.0"
     },
     "autoload": {
         "psr-4": {
