--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "tailwindcss": "^3.4.4"
+  },
+  "dependencies": {
+    "tailgrids": "^2.2.2"
   }
 }
